--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,13 @@
 <h1>Register</h1>
 
-<%= form_for @user, :url => account_path do |f| %>
+<%= form_for @user, :url => account_path, :html => { :class => "form-horizontal" } do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
-  <%= f.submit "Register" %>
+  
+  <div class="control-group">
+    <div class="controls">
+      <%= f.submit "Register", :class => "btn" %>
+    </div>
+  </div>
+  
 <% end %>
