Bootstrapified login modal

--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="modal-body">
-    <p class="modal-notice"></p>
+    <div class="modal-notice"></div>
     <p class="modal-content">
       Indlæser...
     </p>
