--- a/app/views/pages/demo.html.erb
+++ b/app/views/pages/demo.html.erb
@@ -1,7 +1,7 @@
 <%- content_for :page_title, "Prøv gratis demo" -%>
-<h1>Prøv SETminton.dk gratis!</h1>
+<h1>Prøv ForeningFlex.dk gratis!</h1>
 <p>
-	Udfyld nedenstående formular og prøv SETminton.dk gratis i 7 dage. <br>
+	Udfyld nedenstående formular og prøv ForeningFlex.dk gratis i 7 dage. <br>
 	Du vil få mulighed for at se og afprøve nogle af de mange funktionaliteter/moduler vi har i vores system.
 </p>
 
