--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
-<h1>Din brugerprofil</h1>
+<h1>Mine medlemsinformationer</h1>
 
-<%= @user.id %> <%= @user.login %>
+<%= form_for @user, :url => account_path do |f| %>
+  <%= f.error_messages %>
+  <%= render :partial => "edit", :object => f %>
+  <%= f.submit "Gem mine medlemsinformationer", :class => "btn btn-primary" %>
+<% end %>
