--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -22,7 +22,7 @@
       </div>
     </div>
   </div>
-  <%- content_for :javascripts do -%>
+  <%- content_for :scripts do -%>
   <script> 
     $(document).ready(function() {
       $('.carousel').carousel({
