--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <%- content_for :body_id, "front-page" -%>
-<%- content_for :page_title, "Setminton.dk" -%>
+<%- content_for :page_title, "ForeningFlex" -%>
 <%- content_for :meta_description, t('.meta_description') -%>
 <%- content_for :meta_keywords do -%>
-EasyCoaching, badminton, sport, idræt, foreninger, klubber, SETminton, SETklatring, SETfodbold, SEThaandbold, SETsvoemning, SETtennis, SETgymnastik, kasserer, bestyrelse, træner, instruktør, spiller, DGI, DBF, DBU, Easy, Coaching, administration, IT-løsning
+EasyCoaching, badminton, sport, idræt, foreninger, klubber, ForeningFlex, SETklatring, SETfodbold, SEThaandbold, SETsvoemning, SETtennis, SETgymnastik, kasserer, bestyrelse, træner, instruktør, spiller, DGI, DBF, DBU, Easy, Coaching, administration, IT-løsning
 <%- end -%>
 
 <h3 style="font-weight: normal;">
-  SETminton.dk | IT-løsning til de danske badmintonklubber/-foreninger
+  ForeningFlex | IT-løsning til de danske klubber/-foreninger
 </h3>
 
 <h4 style="font-weight: normal;">
@@ -14,13 +14,13 @@ EasyCoaching, badminton, sport, idræt, foreninger, klubber, SETminton, SETklatr
 </h4>
 
 <p class="sale-point">
-  SETminton er skræddersyet til netop jeres behov som badmintonklub. 
+  ForeningFlex er skræddersyet til netop jeres behov. 
   Vi adskiller os fra lignende systemer, ved specifikt at henvende os til badminton. 
   Dette betyder at der ikke forefindes en masse funktioner i systemet, som henvender sig til øvrige sportsgrene.<br><br>
 
-  SETminton henvender sig til hele klubben og giver bestyrelsen, trænerne, holdlerne og 
+  ForeningFlex henvender sig til hele klubben og giver bestyrelsen, trænerne, holdlerne og 
   spillerne en række værktøjer, som alle bidrager til en lettere og sjovere dagligdag i klubben. 
-  Med SETminton får I et system, som samler alle Jeres arbejdsopgaver et sted, og gør det sjovere at være frivillig. 
+  Med ForeningFlex får I et system, som samler alle Jeres arbejdsopgaver et sted, og gør det sjovere at være frivillig. 
   Dette betyder færre fejl, misforståelser og spildtid under den daglige gang som frivillig i badmintonklubben.
 </p>
 
