--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-inner">
     <ul class="nav">
       <li><%= link_to "Forside", root_path %></li>
-      <li><%= link_to "Om SETminton", about_path %></li>
+      <li><%= link_to "Om ForeningFlex", about_path %></li>
       <li><%= link_to "Kontakt", contact_path %></li>
       <li><%= link_to "Lej en bane", about_path %></li>
       <li><%= link_to "Indmeldelse i en klub", about_path %></li>
