--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   
   <title>
     <% page_title = yield :page_title 
-       page_title = "#{page_title} :: SETminton.dk" if page_title.present? and !page_title.downcase.match(/setminton.dk/) %>
+       page_title = "#{page_title} :: ForeningFlex" if page_title.present? and !page_title.downcase.match(/foreningflex.dk/) %>
     <%= page_title %>
   </title>
   
@@ -43,8 +43,8 @@
       <div class="span2 offset2">
         <h3><img style="width: 35px;" src="<%= image_path 'icons/home.png' %>" /> Firma</h3>
         <p>
-          SETminton udvikles af <%= link_to "EasyCoaching", "http://www.easycoaching.dk" %><br>
-          Copyright © 2010-2012<br>
+          ForeningFlex udvikles af <%= link_to "EasyCoaching", "http://www.easycoaching.dk" %><br>
+          Copyright © 2010-2013<br>
           CVR: 3300 7620
         </p>
       </div>
@@ -65,7 +65,7 @@
       </div>
       
       <div class="span2">
-        <h3><img style="width: 35px;" src="<%= image_path 'icons/users.png' %>" /> SETminton.dk</h3>
+        <h3><img style="width: 35px;" src="<%= image_path 'icons/users.png' %>" /> ForeningFlex</h3>
         <p>
           Vesterbro 21E<br>
           9000 Aalborg<br>
