--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -78,8 +78,8 @@
   <div class="fields">
     <div class="row-fluid">
       <div class="span3">
-        <%= edit.label :member_no, "Medlemsnr." %>
-        <%= text_field_tag :member_no, nil, :disabled => true  %>
+        <%= edit.label :id, "Medlemsnr." %>
+        <%= text_field_tag :id, @user.id, :disabled => true  %>
 
         <%= edit.label :age_group, "Årgang" %>
         <%= text_field_tag :age_group, nil, :disabled => true  %>
@@ -104,7 +104,6 @@
   </div>
 </fieldset>
 
-
 <% content_for :scripts do %>
   <script>
     function remove_address(link) {
@@ -124,7 +123,6 @@
       $(this).parent().append(content.replace(regexp, new_id));
       $("#user_addresses_attributes_" + new_id + "__destroy").closest(".fields").hide().slideDown();
 
-      
       $(".remove_address").click(function() {
         remove_address(this);
       });
