--- a/app/views/users/_address_fields.html.erb
+++ b/app/views/users/_address_fields.html.erb
@@ -5,20 +5,20 @@
       <%= f.text_field :address, :placeholder => "F.eks. Andevej 4" %>
 
       <%= f.label :phone, "Telefon nr." %>
-      <%= f.text_field :phone, :placeholder => "F.eks. 12346578" %>
+      <%= f.text_field :phone, :placeholder => "F.eks. 12346578", :maxlength=>"8" %>
     </div>
 
     <div class="span3">
       <%= f.label :zip, "Postnr." %>
-      <%= f.text_field :zip, :placeholder => "F.eks. 1234" %>
+      <%= f.text_field :zip, :placeholder => "F.eks. 1234", :maxlength=>"4" %>
 
       <%= f.label :mobile, "Mobil nr." %>
-      <%= f.text_field :mobile, :placeholder => "F.eks. 87654321" %>
+      <%= f.text_field :mobile, :placeholder => "F.eks. 87654321", :maxlength=>"8" %>
     </div>
 
     <div class="span3">
       <%= f.label :city, "By" %>
-      <%= f.text_field :city, :placeholder => "F.eks. Andeby" %>
+      <%= f.text_field :city, :placeholder => "F.eks. Andeby", :maxlength=>"26" %>
 
       <%= f.label :email, "E-mail" %>
       <%= f.email_field :email, :placeholder => "F.eks. andevej@andeby.dk" %>
