--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Mine medlemsinformationer</h1>
+<h3>Medlem » Mine medlemsinformationer</h3>
 
 <%= form_for @user, :url => account_path, :html => { :multipart => true } do |f| %>
   <% unless f.error_messages.empty? %>
