--- a/app/views/shared/menu/_member.html.erb
+++ b/app/views/shared/menu/_member.html.erb
@@ -3,6 +3,6 @@
   <ul class="dropdown-menu">
     <li><%= link_to "Mine medlemsinformationer", account_path %></li>
     <li><%= link_to "Betalingsoversigt", root_path %></li>
-    <li><%= link_to "Udmeld", resign_path %></li>
+    <li><%= link_to "Udmeld", resign_users_path %></li>
   </ul>
 </li>
