--- a/app/views/users/resign.html.erb
+++ b/app/views/users/resign.html.erb
@@ -1,11 +1,12 @@
 <h3>Medlem » Udmeld</h3>
 
-Såfremt du ikke ønsker at være aktivt medlem af klubben længere, har du her muligheden for at melde dig ud. 
-Før at dette sker, skal du dog begrunde dit ønske og så er det op til klubbens kontaktperson, at bedømme om det kan lade sig gøre. 
-Såfremt dit ønske ikke bliver opfyldt med det samme, kan det skyldes at du måske har et udestående med klubben, fx i forbindelse med kontingent. 
-Det er op til kontaktpersonen at informere dig om din sag.
-
+<p>
+  Såfremt du ikke ønsker at være aktivt medlem af klubben længere, har du her muligheden for at melde dig ud. 
+  Før at dette sker, skal du dog begrunde dit ønske og så er det op til klubbens kontaktperson, at bedømme om det kan lade sig gøre. 
+  Såfremt dit ønske ikke bliver opfyldt med det samme, kan det skyldes at du måske har et udestående med klubben, fx i forbindelse med kontingent. 
+  Det er op til kontaktpersonen at informere dig om din sag.
+</p>
 
 <%= text_area_tag :argument, nil, :rows => 6, :cols => 160 %>
 <br>
-<%= submit_tag "Send min henvendelse", :class => "btn btn-primary" %>
+<%= link_to "Send min henvendelse", resign_user_path(current_user), :class => "btn btn-danger" %>
