--- a/app/views/shared/_simple_popup.js.erb
+++ b/app/views/shared/_simple_popup.js.erb
@@ -1,7 +1,7 @@
 $(document).ready(function() {
-  $("#modal .modal-title").html('<%= js(@modal[:header]) %>');
-  $("#modal .modal-body .modal-content").html('<%= js(@modal[:body]) %>');
-  $("#modal .modal-footer button").html('<%= js(@modal[:button_text]) %>');
+  $("#modal .modal-title").html('<%= j @modal[:header] %>');
+  $("#modal .modal-body .modal-content").html('<%= j @modal[:body] %>');
+  $("#modal .modal-footer button").html('<%= j @modal[:button_text] %>');
   
   $("#modal").modal('show');
 });
