Added club contacts on user

--- a/app/views/user_mailer/resign.html.erb
+++ b/app/views/user_mailer/resign.html.erb
@@ -1,2 +1,4 @@
-Kære <%= @club.name -%>,
-<span style="color: red">Bla bla bla <%= @user.name -%> vil gerne udmeldes</span>
+<h3>Kære <%= @club.name -%>,</h3>
+<p>
+  <span style="color: red">Bla bla bla <%= @user.first_name -%> vil gerne udmeldes</span>
+</p>
