--- a/app/views/user_mailer/resign.html.erb
+++ b/app/views/user_mailer/resign.html.erb
@@ -2,3 +2,7 @@
 <p>
   <span style="color: red">Bla bla bla <%= @user.first_name -%> vil gerne udmeldes</span>
 </p>
+
+<p>
+  <%= @argument -%>
+</p>
