--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -18,6 +18,7 @@
             <%= render :partial => "shared/menu/trainings" %>
             <%= render :partial => "shared/menu/events" %>
             <%= render :partial => "shared/menu/member" %>
+            <%= render :partial => "shared/menu/club" %>
           </ul>
         </li>
       <% elsif current_user.leader? %>
